--- a/manifest.json
+++ b/manifest.json
@@ -20,6 +20,10 @@
 			]
 		}
 	],
+	"options_ui": {
+		"page": "options.html",
+		"open_in_tab": true
+	},
 	"browser_action": {},
 	"permissions": [
 		"tabs",
