--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
 	"manifest_version": 2,
-	"name": "Bilradio",
-	"version": "0.0.1",
-	"description": "Bilradio 2000",
+	"name": "Nyhetspaus",
+	"version": "0.0.7",
+	"description": "Tag en paus och lyssna på dagens Eko",
 	"icons": {
-		"48": "icons/logo-on.png",
-		"96": "icons/logo-on@2x.png"
+		"48": "icons/on.png",
+		"96": "icons/on@2x.png"
 	},
 	"background": {
 		"scripts": [
@@ -18,6 +18,7 @@
 	},
 	"browser_action": {},
 	"permissions": [
-		"notifications"
+		"notifications",
+		"<all_urls>"
 	]
 }
