--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"manifest_version": 2,
 	"name": "Nyhetspaus",
-	"version": "0.0.14",
+	"version": "0.0.17",
 	"description": "Tag en paus och lyssna på dagens Eko",
 	"icons": {
 		"48": "icons/on.png",
@@ -20,6 +20,7 @@
 	"permissions": [
 		"notifications",
 		"idle",
-		"<all_urls>"
+		"<all_urls>",
+		"*://api.sr.se/*"
 	]
 }
