--- a/package.json
+++ b/package.json
@@ -38,12 +38,14 @@
     "lint-fix": "$(npm bin)/eslint --fix . --ext .js,.ts,.tsx"
   },
   "dependencies": {
+    "@sentry/browser": "^5.13.2",
     "domify": "^1.4.0",
     "jsdom": "^16.2.0",
     "jsonpack": "^1.1.5",
     "webextension-polyfill": "^0.4.0"
   },
   "devDependencies": {
+    "@sentry/typescript": "^5.10.0",
     "@types/jest": "^24.0.25",
     "@types/node": "^12.12.12",
     "@types/react-dom": "^16.9.4",
